--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     server_name _;
     location = /favicon.ico { access_log off; log_not_found off; }
-    location /staticfiles/ {
+    location /static/ {
         root /home/ubuntu/Elearn-final;
     }
     location / {
