--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,90 @@
-arabic-reshaper
-asgiref
-asn1crypto
-certifi
-cffi
-chardet
-click
-colorama
-cryptography
-cssselect2
-dj-database-url
-Django
-django-autoslug
-django-ckeditor
-django-crispy-forms
-django-heroku
-django-js-asset
-django-widget-tweaks
-future
-gunicorn
-html5lib
-idna
-lxml
-oscrypto
-Pillow
-psycopg2
-psycopg2-binary
-pycparser
-pyHanko
-pyhanko-certvalidator
-PyJWT
-pypdf
-PyPDF2
-pypng
-python-bidi
-pytz
-PyYAML
-qrcode
-razorpay
-reportlab
-requests
-six
-sqlparse
-svglib
-tinycss2
-twilio
-typing_extensions
-tzdata
-tzlocal
-uritools
-urllib3
-webencodings
-whitenoise
-xhtml2pdf
-google-generativeai
+annotated-types==0.7.0
+arabic-reshaper==3.0.0
+asgiref==3.3.1
+asn1crypto==1.5.1
+cachetools==5.4.0
+certifi==2020.12.5
+cffi==1.16.0
+chardet==4.0.0
+click==8.1.7
+colorama==0.4.6
+cryptography==43.0.0
+cssselect2==0.7.0
+dj-database-url==0.5.0
+Django==3.1.4
+django-autoslug==1.9.8
+django-ckeditor==6.0.0
+django-crispy-forms==1.10.0
+django-heroku==0.3.1
+django-js-asset==1.2.2
+django-widget-tweaks==1.4.8
+docstring_parser==0.16
+future==0.18.2
+google-ai-generativelanguage==0.6.4
+google-api-core==2.19.0
+google-api-python-client==2.140.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.67.1
+google-cloud-bigquery==3.25.0
+google-cloud-core==2.4.1
+google-cloud-dialogflow-cx==1.35.0
+google-cloud-resource-manager==1.12.5
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-generativeai==0.5.4
+google-resumable-media==2.7.2
+googleapis-common-protos==1.63.0
+grpc-google-iam-v1==0.13.1
+grpcio==1.65.4
+grpcio-status==1.62.3
+gunicorn==20.0.4
+html5lib==1.1
+httplib2==0.22.0
+idna==2.10
+lxml==5.2.2
+numpy==2.1.1
+oscrypto==1.3.0
+packaging==24.1
+Pillow==9.0.0
+proto-plus==1.24.0
+protobuf==4.25.4
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pyHanko==0.20.1
+pyhanko-certvalidator==0.24.1
+PyJWT==1.7.1
+pyparsing==3.1.2
+pypdf==4.3.1
+PyPDF2==1.26.0
+pypng==0.20220715.0
+python-bidi==0.4.2
+python-dateutil==2.9.0.post0
+pytz==2020.4
+PyYAML==6.0.1
+qrcode==7.4.2
+razorpay==1.2.0
+reportlab==3.5.56
+requests==2.25.1
+rsa==4.9
+shapely==2.0.6
+six==1.15.0
+sqlparse==0.4.1
+svglib==1.5.1
+tinycss2==1.3.0
+tqdm==4.66.5
+twilio==6.51.1
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+uritemplate==4.1.1
+uritools==4.0.3
+urllib3==1.26.2
+webencodings==0.5.1
+whitenoise==5.1.0
+xhtml2pdf==0.2.11
