--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,17 +67,21 @@ jobs:
       - name: Build and Push Docker image
         run: |
           # Build the Docker image with the date tag
-          DATE_TAG=$(date +'%Y%m%d')  # Set the date format as needed
-          docker build -t arunbabu101/edureka:$DATE_TAG .
+    
+          docker build -t arunbabu101/edureka:latest .
 
           # Push the Docker image with the date tag
-          docker push arunbabu101/edureka:$DATE_TAG
+          docker push arunbabu101/edureka:latest
 
       # Deploy to AWS EC2
       - name: Deploy to EC2
+         env:
+          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@13.60.42.127 << EOF
-            docker pull arunbabu101/edureka:$DATE_TAG
-            docker stop $(docker ps -q --filter ancestor=arunbabu101/edureka:$DATE_TAG)
-            docker run -d -p 8000:8000 arunbabu101/edureka:$DATE_TAG
+          echo "$EC2_SSH_KEY" > private_key.pem
+          chmod 600 private_key.pem
+          ssh -i private_key.pem -o StrictHostKeyChecking=no ubuntu@13.60.42.127 << EOF
+            sudo docker pull arunbabu101/edureka:latest
+            sudo docker stop $(docker ps -q --filter ancestor=arunbabu101/edureka:latest)
+            sudo docker run -d -p 8000:8000 arunbabu101/edureka:latest
           EOF
