--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,98 +1,58 @@
-name: Django CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - main  # Change this to your main branch if necessary
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    env:
-      DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-
-    steps:
-      - uses: actions/checkout@v3
-
-      # Set up Python
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Run tests
-      - name: Run tests
-        run: |
-          python manage.py migrate
-          python manage.py test
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      # Log in to DockerHub
-      - name: Log in to DockerHub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      # Build and push Docker image
-      - name: Build and Push Docker image
-        run: |
-          # Build the Docker image with the date tag
-    
-          docker build -t arunbabu101/edureka:latest .
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-          # Push the Docker image with the date tag
-          docker push arunbabu101/edureka:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: arunbabu101/edureka:${{ github.sha }}
 
       - name: Deploy to EC2
-        env:
-          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-        run: |
-          echo "$EC2_SSH_KEY" > private_key.pem
-          chmod 600 private_key.pem
-          ssh -i private_key.pem -o StrictHostKeyChecking=no ubuntu@13.60.42.127 << EOF
-            # Pull the latest image
-            docker pull arunbabu101/edureka:latest
-
-            # Stop and remove any container using port 8000
-            CONTAINER_ID=$(sudo lsof -t -i:8000)
-            if [ -n "$CONTAINER_ID" ]; then
-              echo "Stopping container using port 8000: $CONTAINER_ID"
-              sudo docker stop "$CONTAINER_ID"
-              sudo docker rm "$CONTAINER_ID"
+        uses: appleboy/ssh-action@master
+        with:
+          host: "YOUR_EC2_PUBLIC_IP"  # Replace with your EC2 public IP
+          username: "ubuntu"
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            # Stop and remove containers using port 8000
+            containers=$(docker ps -q --filter publish=8000)
+            if [ ! -z "$containers" ]; then
+              docker stop $containers
+              docker rm $containers
+            fi
+            
+            # Pull the new image
+            docker pull arunbabu101/edureka:${{ github.sha }}
+            
+            # Stop and remove the edureka container if it exists
+            if docker ps -a --format '{{.Names}}' | grep -q '^edureka$'; then
+              docker stop edureka
+              docker rm edureka
             fi
 
             # Run the new container
-            echo "Starting new container on port 8000"
-            sudo docker run -d -p 8000:8000 arunbabu101/edureka:latest
-          EOF
-
+            docker run -d --name edureka -p 8000:8000 arunbabu101/edureka:${{ github.sha }}
+            
+            # Clean up unused Docker resources
+            docker system prune -af
