--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,63 @@
-name: Django CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main  # Trigger the workflow on pushes to the main branch
+      - main  # Adjust this to your main branch
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
+    # Step 1: Checkout the code from the repository
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    # Step 2: Set up Docker Buildx for multi-platform builds
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    # Step 3: Log in to Docker Hub using credentials stored as GitHub secrets
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
       with:
-        python-version: '3.10.11'
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Generate a unique Docker tag
-      id: tag
-      run: echo "::set-output name=tag::$(date +'%Y%m%d%H%M%S')-$(git rev-parse --short HEAD)"
-      
-    - name: Build Docker image with unique tag
-      run: |
-        docker build -t django-app:${{ steps.tag.outputs.tag }} .
-      
-    - name: Deploy to EC2 via SSH
-      env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-        IMAGE_TAG: ${{ steps.tag.outputs.tag }}
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
-          cd Elearn-final
-          # Stop and remove existing container
-          docker-compose down
+    # Step 4: Build and push the Docker image to Docker Hub
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: arunbabu101/edureka:${{ github.sha }}
+
+    # Step 5: Deploy to EC2 via SSH and pull the new Docker image
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EC2_HOST }}   # EC2 public IP address stored in GitHub secrets
+        username: "ubuntu"
+        key: ${{ secrets.EC2_KEY }}     # SSH private key for EC2 access stored in GitHub secrets
+        script: |
+          # Stop and remove containers using port 8000
+          containers=$(docker ps -q --filter publish=8000)
+          if [ ! -z "$containers" ]; then
+            docker stop $containers
+            docker rm $containers
+          fi
           
-          # Update docker-compose.yml with new image tag
-          sed -i 's/image: django-app:.*/image: django-app:${IMAGE_TAG}/' docker-compose.yml
+          # Pull the new image from Docker Hub
+          docker pull arunbabu101/edureka:${{ github.sha }}
+          
+          # Stop and remove the existing container (if it exists)
+          if docker ps -a --format '{{.Names}}' | grep -q '^edureka$'; then
+            docker stop edureka
+            docker rm edureka
+          fi
 
-          # Start new container with updated image
-          docker-compose up --build -d
-        EOF
+          # Run the new container on port 8000
+          docker run -d --name edureka -p 8000:8000 arunbabu101/edureka:${{ github.sha }}
+          
+          # Clean up unused Docker resources to save space
+          docker system prune -af
