--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    # Step 3: Log in to Docker Hub using credentials stored as GitHub secrets
+    # Step 3: Log in to Docker Hub using credentials stored as GitHub secret
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
