--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,10 @@ jobs:
 
           # Clean up unused Docker resources to save spaces
           docker system prune -af
+
+    - name: Wait for edureka container to start
+      run: sleep 20  # Wait for 10 seconds to ensure the container is fully running
+
     # Step 6: Run database migrations
     - name: Run Django migrations
       run: docker exec edureka python manage.py migrate
